client/videos-app/src/Blog.css
.blog-card {
    border: 0;
    border-radius: 8px;
    background-color: rgba(0, 0, 0, 0.3);
    margin: 10px 0;
    padding: 15px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    transition: transform 0.2s, box-shadow 0.2s;
}

.blog-card:hover {
    transform: translateY(-5px);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.blog-title {
    font-size: 1.5em;
    font-weight: bold;
    margin-bottom: 10px;
    display: flex;
    justify-content: space-between;
}

.blog-action {
    display: flex;
    font-size: 0.5em;
}

.blog-date {
    font-size: 0.9em;
    color: rgba(255, 255, 255, 0.7);
    margin-bottom: 10px;
}

.blog-content {
    font-size: 1em;
    line-height: 1.6;
}

